# django-rest-generator

./: .flake8  .licenserc.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml  test-lint.yml  test-lintyml  validate_workflows.yaml
django-rest-generator/: __init__.py  client.py  exceptions.py  mixins.py  resource.py  types.py  utils.py
django_rest_generator/: __init__.py  client.py  mixins.py  resource.py  response.py  types.py  utils.py
django_rest_generator/parser/: __init__.py  models.py
examples/basic_client_static_resource/: client.py  resources.py
tests/: conftest.py  test_client.py  test_mixins.py  test_parser.py  test_resources.py  test_utils.py
tests/data/: open-api-schema.yaml
