# Copyright (C) 2022 Canonical Ltd

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[build-system]
requires = ["setuptools", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "django_rest_generator"
description = "Generates an SDK for a Django Rest Framework rest server."
authors = [
    { name = "SQA Team", email = "solutionsqa@canonical.com" }
]

readme = "README.md"
requires-python = ">=3.9"

dynamic = ["version"]

dependencies = [
    "requests==2.31.0",
    "prance==0.22.11.4.0",
    "openapi-spec-validator==0.5.1"
]

[project.optional-dependencies]
tests = [
  'coverage',
  'pytest',
  'pytest-cov',
  'flake8',
  'black==22.8.0',
]



[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov=django_rest_generator",
    "--cov-branch",
    "--cov-report=term:skip-covered",
    "--cov-report=xml:.coverage.xml"
]
testpaths = [
    "tests",
]


[tool.black]
line-length = 88
target-version = ['py39']

[tool.setuptools_scm]
